--- a/emplo_sat/data_exploration/regression_summary4.tex
+++ b/emplo_sat/data_exploration/regression_summary4.tex
@@ -1,13 +1,13 @@
 \begin{center}
 \begin{tabular}{lclc}
 \toprule
-\textbf{Dep. Variable:}                                               &       roic       & \textbf{  R-squared:         } &      0.604   \\
-\textbf{Model:}                                                       &       OLS        & \textbf{  Adj. R-squared:    } &      0.604   \\
-\textbf{Method:}                                                      &  Least Squares   & \textbf{  F-statistic:       } &  1.923e+04   \\
-\textbf{Date:}                                                        & Tue, 01 Aug 2023 & \textbf{  Prob (F-statistic):} &      0.00    \\
-\textbf{Time:}                                                        &     21:37:59     & \textbf{  Log-Likelihood:    } & -1.2220e+06  \\
-\textbf{No. Observations:}                                            &      365392      & \textbf{  AIC:               } &  2.444e+06   \\
-\textbf{Df Residuals:}                                                &      365362      & \textbf{  BIC:               } &  2.444e+06   \\
+\textbf{Dep. Variable:}                                               &       roic       & \textbf{  R-squared:         } &      0.125   \\
+\textbf{Model:}                                                       &       OLS        & \textbf{  Adj. R-squared:    } &      0.124   \\
+\textbf{Method:}                                                      &  Least Squares   & \textbf{  F-statistic:       } &      1792.   \\
+\textbf{Date:}                                                        & Sun, 06 Aug 2023 & \textbf{  Prob (F-statistic):} &      0.00    \\
+\textbf{Time:}                                                        &     14:32:20     & \textbf{  Log-Likelihood:    } & -1.3670e+06  \\
+\textbf{No. Observations:}                                            &      365392      & \textbf{  AIC:               } &  2.734e+06   \\
+\textbf{Df Residuals:}                                                &      365362      & \textbf{  BIC:               } &  2.734e+06   \\
 \textbf{Df Model:}                                                    &          29      & \textbf{                     } &              \\
 \textbf{Covariance Type:}                                             &    nonrobust     & \textbf{                     } &              \\
 \bottomrule
@@ -15,47 +15,49 @@
 \begin{tabular}{lcccccc}
                                                                       & \textbf{coef} & \textbf{std err} & \textbf{t} & \textbf{P$> |$t$|$} & \textbf{[0.025} & \textbf{0.975]}  \\
 \midrule
-\textbf{const}                                                        &       0.6966  &        0.137     &     5.083  &         0.000        &        0.428    &        0.965     \\
-\textbf{review\_overall}                                              &       0.1318  &        0.018     &     7.207  &         0.000        &        0.096    &        0.168     \\
-\textbf{review\_p2}                                                   &       0.2855  &        0.026     &    11.051  &         0.000        &        0.235    &        0.336     \\
-\textbf{review\_p3}                                                   &      -0.0560  &        0.023     &    -2.406  &         0.016        &       -0.102    &       -0.010     \\
-\textbf{period\_2}                                                    &      -2.2009  &        0.101     &   -21.731  &         0.000        &       -2.399    &       -2.002     \\
-\textbf{period\_3}                                                    &       2.6592  &        0.091     &    29.185  &         0.000        &        2.481    &        2.838     \\
-\textbf{roic\_lag}                                                    &       0.7495  &        0.001     &   677.973  &         0.000        &        0.747    &        0.752     \\
-\textbf{sector\_Banque, assurance et services financiers}             &       1.3306  &        0.158     &     8.444  &         0.000        &        1.022    &        1.639     \\
-\textbf{sector\_Biotechnologie et sciences de la vie}                 &       1.6139  &        0.170     &     9.475  &         0.000        &        1.280    &        1.948     \\
-\textbf{sector\_Commerce de détail}                                   &      -0.9055  &        0.121     &    -7.456  &         0.000        &       -1.143    &       -0.667     \\
-\textbf{sector\_Commerce de gros}                                     &       2.9690  &        0.149     &    19.974  &         0.000        &        2.678    &        3.260     \\
-\textbf{sector\_Communications}                                       &       1.6149  &        0.122     &    13.238  &         0.000        &        1.376    &        1.854     \\
-\textbf{sector\_Construction}                                         &       0.8581  &        0.162     &     5.307  &         0.000        &        0.541    &        1.175     \\
-\textbf{sector\_Fabrication de bois, de meubles et de papier}         &       1.9878  &        0.215     &     9.228  &         0.000        &        1.566    &        2.410     \\
-\textbf{sector\_Fabrication de transport}                             &      -1.8226  &        0.132     &   -13.797  &         0.000        &       -2.081    &       -1.564     \\
-\textbf{sector\_Fabrication des produits alimentaires et de tabac}    &       1.3499  &        0.125     &    10.800  &         0.000        &        1.105    &        1.595     \\
-\textbf{sector\_Fabrication des textiles et des vêtements}            &      -1.8232  &        0.145     &   -12.595  &         0.000        &       -2.107    &       -1.539     \\
-\textbf{sector\_Impression et Edition}                                &      -0.2305  &        0.164     &    -1.405  &         0.160        &       -0.552    &        0.091     \\
-\textbf{sector\_Industries extractives}                               &       3.0256  &        0.143     &    21.184  &         0.000        &        2.746    &        3.305     \\
-\textbf{sector\_Logiciel informatique}                                &      -1.8807  &        0.139     &   -13.498  &         0.000        &       -2.154    &       -1.608     \\
-\textbf{sector\_Machines industrielles, électriques et électroniques} &       0.9871  &        0.120     &     8.214  &         0.000        &        0.752    &        1.223     \\
-\textbf{sector\_Média et diffusion}                                   &       3.0661  &        0.172     &    17.783  &         0.000        &        2.728    &        3.404     \\
-\textbf{sector\_Métaux et produits métalliques}                       &       2.3523  &        0.153     &    15.373  &         0.000        &        2.052    &        2.652     \\
-\textbf{sector\_Produits chimiques, pétrole, caoutchouc et plastique} &       1.2431  &        0.121     &    10.257  &         0.000        &        1.006    &        1.481     \\
-\textbf{sector\_Produits en cuir, pierre, argile et verre}            &       2.7407  &        0.172     &    15.968  &         0.000        &        2.404    &        3.077     \\
-\textbf{sector\_Services aux entreprises}                             &       0.1478  &        0.122     &     1.207  &         0.227        &       -0.092    &        0.388     \\
-\textbf{sector\_Services immobiliers}                                 &      -2.0206  &        0.289     &    -6.997  &         0.000        &       -2.587    &       -1.455     \\
-\textbf{sector\_Transports et entreposage}                            &       5.4399  &        0.143     &    38.071  &         0.000        &        5.160    &        5.720     \\
-\textbf{sector\_Utilitaires}                                          &      -4.8268  &        0.141     &   -34.240  &         0.000        &       -5.103    &       -4.550     \\
-\textbf{sector\_Voyage, personnel et loisirs}                         &      -0.8513  &        0.133     &    -6.392  &         0.000        &       -1.112    &       -0.590     \\
+\textbf{const}                                                        &      11.2594  &        0.202     &    55.616  &         0.000        &       10.863    &       11.656     \\
+\textbf{review\_overall}                                              &       0.1924  &        0.027     &     7.077  &         0.000        &        0.139    &        0.246     \\
+\textbf{review\_p2}                                                   &       0.3084  &        0.038     &     8.026  &         0.000        &        0.233    &        0.384     \\
+\textbf{review\_p3}                                                   &       0.2951  &        0.035     &     8.531  &         0.000        &        0.227    &        0.363     \\
+\textbf{period\_2}                                                    &      -3.3715  &        0.151     &   -22.389  &         0.000        &       -3.667    &       -3.076     \\
+\textbf{period\_3}                                                    &      -1.2466  &        0.135     &    -9.219  &         0.000        &       -1.512    &       -0.982     \\
+\textbf{roic\_growth}                                                 &      -0.0264  &        0.000     &   -87.744  &         0.000        &       -0.027    &       -0.026     \\
+\textbf{sector\_Banque, assurance et services financiers}             &       4.6419  &        0.234     &    19.819  &         0.000        &        4.183    &        5.101     \\
+\textbf{sector\_Biotechnologie et sciences de la vie}                 &      -0.9080  &        0.253     &    -3.586  &         0.000        &       -1.404    &       -0.412     \\
+\textbf{sector\_Commerce de détail}                                   &      -3.6824  &        0.180     &   -20.402  &         0.000        &       -4.036    &       -3.329     \\
+\textbf{sector\_Commerce de gros}                                     &       8.8831  &        0.221     &    40.256  &         0.000        &        8.451    &        9.316     \\
+\textbf{sector\_Communications}                                       &      -2.5820  &        0.181     &   -14.251  &         0.000        &       -2.937    &       -2.227     \\
+\textbf{sector\_Construction}                                         &       1.0437  &        0.240     &     4.341  &         0.000        &        0.572    &        1.515     \\
+\textbf{sector\_Fabrication de bois, de meubles et de papier}         &       4.7134  &        0.320     &    14.717  &         0.000        &        4.086    &        5.341     \\
+\textbf{sector\_Fabrication de transport}                             &      -3.7193  &        0.196     &   -18.938  &         0.000        &       -4.104    &       -3.334     \\
+\textbf{sector\_Fabrication des produits alimentaires et de tabac}    &       3.6958  &        0.186     &    19.889  &         0.000        &        3.332    &        4.060     \\
+\textbf{sector\_Fabrication des textiles et des vêtements}            &       1.5648  &        0.215     &     7.274  &         0.000        &        1.143    &        1.986     \\
+\textbf{sector\_Impression et Edition}                                &      -4.0309  &        0.244     &   -16.529  &         0.000        &       -4.509    &       -3.553     \\
+\textbf{sector\_Industries extractives}                               &      -0.8006  &        0.212     &    -3.773  &         0.000        &       -1.217    &       -0.385     \\
+\textbf{sector\_Logiciel informatique}                                &      -1.2054  &        0.209     &    -5.759  &         0.000        &       -1.616    &       -0.795     \\
+\textbf{sector\_Machines industrielles, électriques et électroniques} &       1.3848  &        0.179     &     7.749  &         0.000        &        1.035    &        1.735     \\
+\textbf{sector\_Média et diffusion}                                   &       2.8838  &        0.256     &    11.247  &         0.000        &        2.381    &        3.386     \\
+\textbf{sector\_Métaux et produits métalliques}                       &       3.6918  &        0.228     &    16.225  &         0.000        &        3.246    &        4.138     \\
+\textbf{sector\_Produits chimiques, pétrole, caoutchouc et plastique} &       3.1084  &        0.180     &    17.252  &         0.000        &        2.755    &        3.462     \\
+\textbf{sector\_Produits en cuir, pierre, argile et verre}            &      -1.5973  &        0.255     &    -6.261  &         0.000        &       -2.097    &       -1.097     \\
+\textbf{sector\_Services aux entreprises}                             &       2.9117  &        0.182     &    16.001  &         0.000        &        2.555    &        3.268     \\
+\textbf{sector\_Services immobiliers}                                 &      -8.7792  &        0.429     &   -20.454  &         0.000        &       -9.620    &       -7.938     \\
+\textbf{sector\_Transports et entreposage}                            &       5.1794  &        0.212     &    24.375  &         0.000        &        4.763    &        5.596     \\
+\textbf{sector\_Utilitaires}                                          &      -8.4001  &        0.209     &   -40.099  &         0.000        &       -8.811    &       -7.989     \\
+\textbf{sector\_Voyage, personnel et loisirs}                         &      -4.1032  &        0.198     &   -20.730  &         0.000        &       -4.491    &       -3.715     \\
 \bottomrule
 \end{tabular}
 \begin{tabular}{lclc}
-\textbf{Omnibus:}       & 146690.971 & \textbf{  Durbin-Watson:     } &      0.016   \\
-\textbf{Prob(Omnibus):} &    0.000   & \textbf{  Jarque-Bera (JB):  } & 4137114.094  \\
-\textbf{Skew:}          &   -1.341   & \textbf{  Prob(JB):          } &       0.00   \\
-\textbf{Kurtosis:}      &   19.265   & \textbf{  Cond. No.          } &       855.   \\
+\textbf{Omnibus:}       & 93077.265 & \textbf{  Durbin-Watson:     } &      0.011   \\
+\textbf{Prob(Omnibus):} &    0.000  & \textbf{  Jarque-Bera (JB):  } & 1265833.334  \\
+\textbf{Skew:}          &    0.850  & \textbf{  Prob(JB):          } &       0.00   \\
+\textbf{Kurtosis:}      &   11.958  & \textbf{  Cond. No.          } &   2.99e+03   \\
 \bottomrule
 \end{tabular}
 %\caption{OLS Regression Results}
 \end{center}
 
 Notes: \newline
- [1] Standard Errors assume that the covariance matrix of the errors is correctly specified.
+ [1] Standard Errors assume that the covariance matrix of the errors is correctly specified. \newline
+ [2] The condition number is large, 2.99e+03. This might indicate that there are \newline
+ strong multicollinearity or other numerical problems.
