--- a/emplo_sat/data_exploration/regression_summary9.tex
+++ b/emplo_sat/data_exploration/regression_summary9.tex
@@ -1,61 +1,59 @@
 \begin{center}
 \begin{tabular}{lclc}
 \toprule
-\textbf{Dep. Variable:}                                               &       roic       & \textbf{  R-squared:         } &      0.624   \\
-\textbf{Model:}                                                       &       OLS        & \textbf{  Adj. R-squared:    } &      0.624   \\
-\textbf{Method:}                                                      &  Least Squares   & \textbf{  F-statistic:       } &  1.836e+04   \\
-\textbf{Date:}                                                        & Tue, 01 Aug 2023 & \textbf{  Prob (F-statistic):} &      0.00    \\
-\textbf{Time:}                                                        &     21:59:25     & \textbf{  Log-Likelihood:    } & -1.2127e+06  \\
-\textbf{No. Observations:}                                            &      365392      & \textbf{  AIC:               } &  2.425e+06   \\
-\textbf{Df Residuals:}                                                &      365358      & \textbf{  BIC:               } &  2.426e+06   \\
-\textbf{Df Model:}                                                    &          33      & \textbf{                     } &              \\
+\textbf{Dep. Variable:}                                               &       roic       & \textbf{  R-squared:         } &      0.382   \\
+\textbf{Model:}                                                       &       OLS        & \textbf{  Adj. R-squared:    } &      0.382   \\
+\textbf{Method:}                                                      &  Least Squares   & \textbf{  F-statistic:       } &      5138.   \\
+\textbf{Date:}                                                        & Sun, 06 Aug 2023 & \textbf{  Prob (F-statistic):} &      0.00    \\
+\textbf{Time:}                                                        &     14:44:53     & \textbf{  Log-Likelihood:    } & -9.2630e+05  \\
+\textbf{No. Observations:}                                            &      258020      & \textbf{  AIC:               } &  1.853e+06   \\
+\textbf{Df Residuals:}                                                &      257988      & \textbf{  BIC:               } &  1.853e+06   \\
+\textbf{Df Model:}                                                    &          31      & \textbf{                     } &              \\
 \textbf{Covariance Type:}                                             &    nonrobust     & \textbf{                     } &              \\
 \bottomrule
 \end{tabular}
 \begin{tabular}{lcccccc}
                                                                       & \textbf{coef} & \textbf{std err} & \textbf{t} & \textbf{P$> |$t$|$} & \textbf{[0.025} & \textbf{0.975]}  \\
 \midrule
-\textbf{const}                                                        &      27.2877  &        0.269     &   101.612  &         0.000        &       26.761    &       27.814     \\
-\textbf{review\_overall}                                              &       0.1008  &        0.018     &     5.643  &         0.000        &        0.066    &        0.136     \\
-\textbf{review\_p2}                                                   &       0.2980  &        0.025     &    11.829  &         0.000        &        0.249    &        0.347     \\
-\textbf{review\_p3}                                                   &      -0.0419  &        0.023     &    -1.847  &         0.065        &       -0.086    &        0.003     \\
-\textbf{period\_2}                                                    &      -2.5421  &        0.099     &   -25.711  &         0.000        &       -2.736    &       -2.348     \\
-\textbf{period\_3}                                                    &       2.4722  &        0.089     &    27.816  &         0.000        &        2.298    &        2.646     \\
-\textbf{roic\_lag}                                                    &       0.6627  &        0.001     &   529.044  &         0.000        &        0.660    &        0.665     \\
-\textbf{ln\_employees}                                                &       0.2607  &        0.008     &    32.158  &         0.000        &        0.245    &        0.277     \\
-\textbf{rd\_intensity}                                                &      -1.3834  &        0.427     &    -3.242  &         0.001        &       -2.220    &       -0.547     \\
-\textbf{cash\_ratio}                                                  &      -3.9071  &        0.151     &   -25.868  &         0.000        &       -4.203    &       -3.611     \\
-\textbf{book\_to\_market}                                             &      -2.2271  &        0.017     &  -134.069  &         0.000        &       -2.260    &       -2.195     \\
-\textbf{sector\_Banque, assurance et services financiers}             &       2.9230  &        0.158     &    18.457  &         0.000        &        2.613    &        3.233     \\
-\textbf{sector\_Biotechnologie et sciences de la vie}                 &       1.9561  &        0.166     &    11.773  &         0.000        &        1.630    &        2.282     \\
-\textbf{sector\_Commerce de détail}                                   &       0.5273  &        0.119     &     4.429  &         0.000        &        0.294    &        0.761     \\
-\textbf{sector\_Commerce de gros}                                     &       3.9122  &        0.146     &    26.851  &         0.000        &        3.627    &        4.198     \\
-\textbf{sector\_Communications}                                       &       3.6106  &        0.120     &    30.122  &         0.000        &        3.376    &        3.846     \\
-\textbf{sector\_Construction}                                         &       3.8225  &        0.160     &    23.948  &         0.000        &        3.510    &        4.135     \\
-\textbf{sector\_Fabrication de bois, de meubles et de papier}         &       3.8894  &        0.211     &    18.463  &         0.000        &        3.477    &        4.302     \\
-\textbf{sector\_Fabrication de transport}                             &       0.2913  &        0.130     &     2.244  &         0.025        &        0.037    &        0.546     \\
-\textbf{sector\_Fabrication des produits alimentaires et de tabac}    &       1.5222  &        0.122     &    12.464  &         0.000        &        1.283    &        1.762     \\
-\textbf{sector\_Fabrication des textiles et des vêtements}            &      -1.6190  &        0.142     &   -11.435  &         0.000        &       -1.896    &       -1.342     \\
-\textbf{sector\_Impression et Edition}                                &       1.1965  &        0.161     &     7.438  &         0.000        &        0.881    &        1.512     \\
-\textbf{sector\_Industries extractives}                               &       5.9278  &        0.141     &    42.063  &         0.000        &        5.652    &        6.204     \\
-\textbf{sector\_Logiciel informatique}                                &      -0.9982  &        0.136     &    -7.336  &         0.000        &       -1.265    &       -0.732     \\
-\textbf{sector\_Machines industrielles, électriques et électroniques} &       1.7368  &        0.118     &    14.754  &         0.000        &        1.506    &        1.968     \\
-\textbf{sector\_Média et diffusion}                                   &       3.3533  &        0.169     &    19.803  &         0.000        &        3.021    &        3.685     \\
-\textbf{sector\_Métaux et produits métalliques}                       &       4.7259  &        0.150     &    31.469  &         0.000        &        4.432    &        5.020     \\
-\textbf{sector\_Produits chimiques, pétrole, caoutchouc et plastique} &       1.9754  &        0.119     &    16.547  &         0.000        &        1.741    &        2.209     \\
-\textbf{sector\_Produits en cuir, pierre, argile et verre}            &       5.0239  &        0.168     &    29.866  &         0.000        &        4.694    &        5.354     \\
-\textbf{sector\_Services aux entreprises}                             &       1.3889  &        0.120     &    11.569  &         0.000        &        1.154    &        1.624     \\
-\textbf{sector\_Services immobiliers}                                 &      -1.8027  &        0.283     &    -6.372  &         0.000        &       -2.357    &       -1.248     \\
-\textbf{sector\_Transports et entreposage}                            &       8.7035  &        0.142     &    61.462  &         0.000        &        8.426    &        8.981     \\
-\textbf{sector\_Utilitaires}                                          &      -3.4112  &        0.138     &   -24.717  &         0.000        &       -3.682    &       -3.141     \\
-\textbf{sector\_Voyage, personnel et loisirs}                         &       0.1419  &        0.130     &     1.089  &         0.276        &       -0.113    &        0.397     \\
+\textbf{const}                                                        &      96.8785  &        0.372     &   260.596  &         0.000        &       96.150    &       97.607     \\
+\textbf{review\_overall}                                              &       0.1659  &        0.023     &     7.068  &         0.000        &        0.120    &        0.212     \\
+\textbf{review\_p3}                                                   &       0.1484  &        0.030     &     4.983  &         0.000        &        0.090    &        0.207     \\
+\textbf{period\_3}                                                    &      -0.2638  &        0.116     &    -2.265  &         0.023        &       -0.492    &       -0.036     \\
+\textbf{roic\_growth}                                                 &      -0.0222  &        0.000     &   -84.611  &         0.000        &       -0.023    &       -0.022     \\
+\textbf{ln\_employees}                                                &       0.4744  &        0.014     &    33.072  &         0.000        &        0.446    &        0.502     \\
+\textbf{rd\_intensity}                                                &     -14.3052  &        0.664     &   -21.534  &         0.000        &      -15.607    &      -13.003     \\
+\textbf{cash\_ratio}                                                  &     -13.1329  &        0.244     &   -53.931  &         0.000        &      -13.610    &      -12.656     \\
+\textbf{book\_to\_market}                                             &      -7.1790  &        0.022     &  -320.077  &         0.000        &       -7.223    &       -7.135     \\
+\textbf{sector\_Banque, assurance et services financiers}             &      13.2333  &        0.287     &    46.153  &         0.000        &       12.671    &       13.795     \\
+\textbf{sector\_Biotechnologie et sciences de la vie}                 &      -0.6457  &        0.269     &    -2.399  &         0.016        &       -1.173    &       -0.118     \\
+\textbf{sector\_Commerce de détail}                                   &       1.3421  &        0.192     &     6.973  &         0.000        &        0.965    &        1.719     \\
+\textbf{sector\_Commerce de gros}                                     &       9.6035  &        0.234     &    41.125  &         0.000        &        9.146    &       10.061     \\
+\textbf{sector\_Communications}                                       &       5.4542  &        0.193     &    28.252  &         0.000        &        5.076    &        5.833     \\
+\textbf{sector\_Construction}                                         &      10.4420  &        0.257     &    40.649  &         0.000        &        9.939    &       10.946     \\
+\textbf{sector\_Fabrication de bois, de meubles et de papier}         &      10.0718  &        0.328     &    30.723  &         0.000        &        9.429    &       10.714     \\
+\textbf{sector\_Fabrication de transport}                             &       4.0917  &        0.209     &    19.545  &         0.000        &        3.681    &        4.502     \\
+\textbf{sector\_Fabrication des produits alimentaires et de tabac}    &       3.3591  &        0.198     &    16.997  &         0.000        &        2.972    &        3.746     \\
+\textbf{sector\_Fabrication des textiles et des vêtements}            &       2.0636  &        0.228     &     9.043  &         0.000        &        1.616    &        2.511     \\
+\textbf{sector\_Impression et Edition}                                &       2.0411  &        0.254     &     8.046  &         0.000        &        1.544    &        2.538     \\
+\textbf{sector\_Industries extractives}                               &      10.1706  &        0.226     &    45.049  &         0.000        &        9.728    &       10.613     \\
+\textbf{sector\_Logiciel informatique}                                &       2.7336  &        0.219     &    12.474  &         0.000        &        2.304    &        3.163     \\
+\textbf{sector\_Machines industrielles, électriques et électroniques} &       3.2536  &        0.191     &    17.036  &         0.000        &        2.879    &        3.628     \\
+\textbf{sector\_Média et diffusion}                                   &       4.6904  &        0.262     &    17.914  &         0.000        &        4.177    &        5.204     \\
+\textbf{sector\_Métaux et produits métalliques}                       &       8.9410  &        0.238     &    37.632  &         0.000        &        8.475    &        9.407     \\
+\textbf{sector\_Produits chimiques, pétrole, caoutchouc et plastique} &       4.9037  &        0.193     &    25.346  &         0.000        &        4.525    &        5.283     \\
+\textbf{sector\_Produits en cuir, pierre, argile et verre}            &       7.5218  &        0.272     &    27.692  &         0.000        &        6.989    &        8.054     \\
+\textbf{sector\_Services aux entreprises}                             &       6.9066  &        0.193     &    35.726  &         0.000        &        6.528    &        7.285     \\
+\textbf{sector\_Services immobiliers}                                 &      -6.3304  &        0.437     &   -14.488  &         0.000        &       -7.187    &       -5.474     \\
+\textbf{sector\_Transports et entreposage}                            &      21.7620  &        0.230     &    94.436  &         0.000        &       21.310    &       22.214     \\
+\textbf{sector\_Utilitaires}                                          &      -4.8792  &        0.221     &   -22.085  &         0.000        &       -5.312    &       -4.446     \\
+\textbf{sector\_Voyage, personnel et loisirs}                         &       2.1185  &        0.210     &    10.078  &         0.000        &        1.706    &        2.531     \\
 \bottomrule
 \end{tabular}
 \begin{tabular}{lclc}
-\textbf{Omnibus:}       & 160463.555 & \textbf{  Durbin-Watson:     } &      0.016   \\
-\textbf{Prob(Omnibus):} &    0.000   & \textbf{  Jarque-Bera (JB):  } & 5090369.064  \\
-\textbf{Skew:}          &   -1.493   & \textbf{  Prob(JB):          } &       0.00   \\
-\textbf{Kurtosis:}      &   21.040   & \textbf{  Cond. No.          } &   1.15e+03   \\
+\textbf{Omnibus:}       & 55875.371 & \textbf{  Durbin-Watson:     } &      0.013   \\
+\textbf{Prob(Omnibus):} &    0.000  & \textbf{  Jarque-Bera (JB):  } & 1741358.067  \\
+\textbf{Skew:}          &    0.351  & \textbf{  Prob(JB):          } &       0.00   \\
+\textbf{Kurtosis:}      &   15.708  & \textbf{  Cond. No.          } &   3.71e+03   \\
 \bottomrule
 \end{tabular}
 %\caption{OLS Regression Results}
@@ -63,5 +61,5 @@
 
 Notes: \newline
  [1] Standard Errors assume that the covariance matrix of the errors is correctly specified. \newline
- [2] The condition number is large, 1.15e+03. This might indicate that there are \newline
+ [2] The condition number is large, 3.71e+03. This might indicate that there are \newline
  strong multicollinearity or other numerical problems.
